--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -43,7 +43,7 @@ document.querySelector('button').onclick = functionRef;
 ```
 
 В React подход похож, но есть важные отличия:
-1. Имена событий в стиле **camelCase** (`onClick`, `onChange`, `onSubmit`).
+1. Имена событий пишутся в стиле **camelCase** (`onClick`, `onChange`, `onSubmit`).
 2. В JSX передаём **ссылку на функцию**, а не строку.
 3. React использует **SyntheticEvent** для единообразного поведения во всех браузерах.
 
