--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -42,7 +42,7 @@ document.querySelector('button').onclick = functionRef;
 <button onclick="functionRef()">Отправить</button>
 ```
 
-В React подход похож, но есть важные отличия:
+В React используется похожий подход, но в нём есть важные отличия:
 1. Имена событий пишутся в стиле **camelCase** (`onClick`, `onChange`, `onSubmit`).
 2. В JSX передаём **ссылку на функцию**, а не строку.
 3. React использует **SyntheticEvent** для единообразного поведения во всех браузерах.
