--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -113,6 +113,7 @@ const [state, setState] = useState(initialValue);
 ```
 - `state` — текущее значение.
 - `setState` — функция для обновления.
+- `initialValue` — начение начального состояния.
 - При вызове `setState` компонент перерисуется.
 
 **Правила:**
