--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -26,7 +26,7 @@
 
 ---
 
-## Теория: обработка событий в React
+## Обработка событий в React
 
 В нативном JS обработчики событий добавляют так:
 ```js
@@ -82,7 +82,7 @@ const handleWithId = (id) => (evt) => { ... };
 
 ---
 
-## Пример 2: SyntheticEvent и отмена поведения
+## SyntheticEvent и отмена поведения
 
 SyntheticEvent — кроссбраузерная обёртка, которая имеет методы `preventDefault()` и `stopPropagation()`.
 
@@ -105,7 +105,7 @@ function FormButton() {
 
 ---
 
-## Теория: useState
+## useState
 
 `useState` — хук для хранения состояния в функциональных компонентах.
 ```js
@@ -113,7 +113,7 @@ const [state, setState] = useState(initialValue);
 ```
 - `state` — текущее значение.
 - `setState` — функция для обновления.
-- `initialValue` — начение начального состояния.
+- `initialValue` — значение начального состояния.
 - При вызове `setState` компонент перерисуется.
 
 **Правила:**
@@ -231,6 +231,3 @@ function ProductList() {
 - В классовых компонентах состояние хранится в `this.state` и обновляется через `this.setState`.
 - Фильтрация и другие операции над данными выполняются на основе состояния.
 
----
-
-**Источник:** материалы вебинара «События и состояние» и практические примеры из презентации.
