--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -4,14 +4,9 @@
 
 ## План занятия
 
-- Понятие компонентов и событий в React
-- Обработка событий в React и отличие от нативного JS
-- SyntheticEvent и кроссбраузерность
-- Локальное состояние компонента (useState)
-- State в классовых компонентах
-- Практика: LikeButton, FormButton, Counter, ProductList, ClassLikeButton
-- Разбор по шагам каждого примера
-- Частые ошибки и рекомендации
+- События
+- Состояние
+- Фильтрация и отображение списков
 
 ---
 
