--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -114,7 +114,7 @@ const [state, setState] = useState(initialValue);
 **Правила:**
 - Хуки вызываем только на верхнем уровне функции-компонента.
 - Нельзя вызывать внутри условий или циклов.
-- Изменять состояние напрямую запрещено.
+- Изменять состояние напрямую запрещено — для этого всегда используйте функцию `setState`.
 
 ---
 
