--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -44,7 +44,7 @@ document.querySelector('button').onclick = functionRef;
 
 ---
 
-## Пример 1: LikeButton — обработка клика
+## Пример 1. LikeButton — обработка клика
 
 ```jsx
 function LikeButton() {
@@ -118,7 +118,7 @@ const [state, setState] = useState(initialValue);
 
 ---
 
-## Пример 3: Counter — счётчик на useState
+## Пример 3. Counter — счётчик на useState
 
 ```jsx
 import { useState } from 'react';
@@ -179,7 +179,7 @@ class ClassLikeButton extends Component {
 
 ---
 
-## Пример 5: Фильтрация списка по вводу
+## Пример 5: фильтрация списка по вводу
 
 ```jsx
 const products = ['яблоко', 'банан', 'груша', 'апельсин'];
