--- a/events-state/Конспект.md
+++ b/events-state/Конспект.md
@@ -150,7 +150,7 @@ function Counter() {
 
 ---
 
-## Пример 4: state в классовых компонентах
+## Пример 4. state в классовых компонентах
 
 ```jsx
 import React, { Component } from 'react';
@@ -179,7 +179,7 @@ class ClassLikeButton extends Component {
 
 ---
 
-## Пример 5: фильтрация списка по вводу
+## Пример 5. Фильтрация списка по вводу
 
 ```jsx
 const products = ['яблоко', 'банан', 'груша', 'апельсин'];
