--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -339,7 +339,7 @@ function Box() {
 
 ---
 
-## Context API — зачем нужен
+## Context API
 
 Иногда нужно передать данные (например, токен пользователя) во всё дерево компонентов.
 Передача через props становится неудобной. **Context API** позволяет создать общий источник данных.
