feat: added examples

--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -28,7 +28,17 @@ function Counter() {
     </button>
   );
 }
-```
+````
+
+### Разбор синтаксиса
+
+1. `import { useState } from 'react'` — подключаем хук.
+2. `const [count, setCount] = useState(0)` — деструктурируем массив:
+
+   * `count` — текущее значение;
+   * `setCount` — функция для обновления;
+   * `0` — начальное значение.
+3. При вызове `setCount(...)` компонент автоматически перерисовывается.
 
 ---
 
@@ -46,11 +56,16 @@ useEffect(() => {
 }, []); // [] → запуск один раз при монтировании
 ```
 
+### Разбор синтаксиса
+
+1. `useEffect(callback, deps)` — принимает функцию и массив зависимостей.
+2. Внутри `callback` можно запускать побочные эффекты (запросы, таймеры).
+3. Если `callback` возвращает функцию, она вызовется при размонтировании или при изменении зависимостей.
+4. `[]` означает «выполнить один раз при монтировании».
+
 ---
 
 ## Пример: поллинг новостей
-
-Запрос данных каждые 5 секунд. Простая версия:
 
 ```jsx
 import { useEffect, useState } from 'react';
@@ -72,13 +87,16 @@ export default function LatestNews() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useState([])` — состояние для новостей.
+2. В `useEffect` создаём `setInterval`, который каждые 5 секунд делает запрос.
+3. `return () => clearInterval(id)` — очистка интервала при размонтировании.
+4. `news.map(...)` — отображение списка.
+
 ---
 
 ## useRef — хранение значения без рендера
-
-Хранит «живое» значение между рендерами. Обновление `.current` не вызывает перерисовку.
-
-Пример: защита от устаревших запросов.
 
 ```jsx
 import { useEffect, useRef, useState } from 'react';
@@ -95,7 +113,7 @@ export default function LatestNewsStable() {
       const res = await fetch(import.meta.env.VITE_NEWS_URL);
       const data = await res.json();
 
-      if (tsRef.current === ts) setNews(data); // обновляем только актуальные данные
+      if (tsRef.current === ts) setNews(data);
     }, 5000);
 
     return () => clearInterval(id);
@@ -105,11 +123,15 @@ export default function LatestNewsStable() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useRef()` создаёт объект `{ current: undefined }`.
+2. Значение `tsRef.current` сохраняется между рендерами, но не вызывает обновление UI.
+3. Сравнение `if (tsRef.current === ts)` защищает от «устаревшего» ответа.
+
 ---
 
 ## Кастомные хуки — пример usePolling
-
-Чтобы не дублировать один и тот же код, можно вынести его в функцию.
 
 ```jsx
 import { useEffect, useRef, useState } from 'react';
@@ -152,13 +174,18 @@ export default function usePolling(url, interval = 5000, initial = []) {
 }
 ```
 
+### Разбор синтаксиса
+
+1. Кастомный хук — это обычная функция, которая использует встроенные хуки.
+2. `useState` хранит `data`, `loading`, `error`.
+3. `useEffect` запускает периодический запрос и очищает таймер.
+4. Возвращаем объект `{ data, loading, error }` → можно переиспользовать.
+
 ---
 
 ## Дополнительные хуки
 
-### useReducer — управление состоянием через редьюсер
-
-Альтернатива `useState`. Все изменения описываются в одной функции `reducer`.
+### useReducer
 
 ```jsx
 import { useReducer } from 'react';
@@ -184,11 +211,15 @@ export default function Counter() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useReducer(reducer, initialState)` возвращает `[state, dispatch]`.
+2. `dispatch({ type: '...' })` отправляет событие.
+3. `reducer(state, action)` описывает все изменения состояния.
+
 ---
 
-### useCallback — запоминает функцию
-
-Помогает не создавать новую функцию на каждый рендер.
+### useCallback
 
 ```jsx
 import { useState, useCallback } from 'react';
@@ -204,11 +235,14 @@ function SearchBox({ onSearch }) {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useCallback(fn, deps)` возвращает мемоизированную версию функции.
+2. Функция пересоздаётся только при изменении зависимостей.
+
 ---
 
-### useMemo — запоминает вычисления
-
-Полезно для тяжёлых фильтраций или сортировок.
+### useMemo
 
 ```jsx
 import { useMemo, useState } from 'react';
@@ -229,11 +263,14 @@ function ExpensiveList({ items }) {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useMemo(calcFn, deps)` возвращает результат вычисления.
+2. Пересчёт происходит только при изменении зависимостей.
+
 ---
 
-### useTransition — разделение обновлений
-
-Срочные обновления (например, печать текста) выполняются сразу, несрочные (например, фильтрация) откладываются.
+### useTransition
 
 ```jsx
 import { useState, useTransition } from 'react';
@@ -261,11 +298,15 @@ function Search({ items }) {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useTransition()` возвращает `[isPending, startTransition]`.
+2. Всё внутри `startTransition(...)` считается «несрочным» обновлением.
+3. `isPending` показывает, идёт ли выполнение.
+
 ---
 
-### useDeferredValue — отложенное значение
-
-Используется для ввода текста, чтобы отрисовка больших списков не мешала вводу.
+### useDeferredValue
 
 ```jsx
 import { useDeferredValue, useState } from 'react';
@@ -285,11 +326,14 @@ function SearchDeferred({ items }) {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useDeferredValue(value)` возвращает «отложенную» версию значения.
+2. Полезно для плавности при вводе текста и фильтрации.
+
 ---
 
-### useId — уникальные id
-
-Удобно для связки `label` и `input`.
+### useId
 
 ```jsx
 import { useId } from 'react';
@@ -305,12 +349,14 @@ function Field() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useId()` возвращает уникальный id.
+2. Подходит для связки `label` и `input`.
+
 ---
 
-### useLayoutEffect — синхронный эффект
-
-Срабатывает **после изменения DOM, но до отрисовки на экране**.
-Используется для измерений и синхронных корректировок.
+### useLayoutEffect
 
 ```jsx
 import { useLayoutEffect, useRef, useState } from 'react';
@@ -337,14 +383,19 @@ function Box() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useLayoutEffect` работает как `useEffect`, но выполняется синхронно перед отрисовкой.
+2. Используется для измерений DOM.
+
+### Разбор синтаксиса
+
+1. `useLayoutEffect` работает как `useEffect`, но выполняется синхронно перед отрисовкой.
+2. Используется для измерений DOM.
+
 ---
 
 ## Context API
-
-Иногда нужно передать данные (например, токен пользователя) во всё дерево компонентов.
-Передача через props становится неудобной. **Context API** позволяет создать общий источник данных.
-
----
 
 ### Создание контекста
 
@@ -360,9 +411,14 @@ const AuthContext = createContext({
 export default AuthContext;
 ```
 
+### Разбор синтаксиса
+
+1. `createContext(defaultValue)` создаёт объект контекста.
+2. `defaultValue` используется только если нет `<Provider>`.
+
 ---
 
-### Provider — делимся состоянием
+### Provider
 
 ```jsx
 // App.jsx
@@ -380,9 +436,14 @@ export default function App() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `<AuthContext.Provider value={...}>` делает данные доступными для всех дочерних компонентов.
+2. `value` может содержать любое значение: примитив, объект, функции.
+
 ---
 
-### useContext — доступ к данным
+### useContext
 
 ```jsx
 // components/ComponentA.jsx
@@ -403,9 +464,14 @@ export default function ComponentA() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `useContext(AuthContext)` возвращает текущее значение контекста.
+2. Избегает «проброса пропсов» вниз по дереву.
+
 ---
 
-### Consumer — альтернатива
+### Consumer
 
 ```jsx
 // components/ComponentC.jsx
@@ -427,14 +493,55 @@ export default function ComponentC() {
 }
 ```
 
+### Разбор синтаксиса
+
+1. `<AuthContext.Consumer>` принимает функцию-ребёнка.
+2. Аргумент функции — текущее значение контекста.
+3. Менее удобен, чем `useContext`, но работает и в классовых компонентах.
+
 ---
 
-## Итоги
+## Шпаргалка: хуки и Context API
 
-* `useState`, `useEffect`, `useRef` — базовые хуки для состояния и эффектов.
-* Кастомные хуки помогают переиспользовать код.
-* `useReducer`, `useCallback`, `useMemo` — для сложной логики и оптимизаций.
-* `useTransition`, `useDeferredValue` — для плавности интерфейса.
-* `useId` и `useLayoutEffect` — для работы с формами и DOM.
-* Context API решает проблему «проброса пропсов» и делает общие данные доступными в любом месте дерева.
+* **useState** — `const [state, setState] = useState(initial)`
+  Хранение локального состояния, пара «значение + функция обновления».
+
+* **useEffect** — `useEffect(() => { ... }, [deps])`
+  Побочные эффекты (запросы, таймеры, подписки), очистка через `return`.
+
+* **useRef** — `const ref = useRef(initial)`
+  Объект `{ current }`, сохраняется между рендерами, не вызывает перерисовку.
+
+* **useReducer** — `const [state, dispatch] = useReducer(reducer, init)`
+  Управление состоянием через редьюсер и `dispatch(action)`.
+
+* **useCallback** — `const fn = useCallback(() => {...}, [deps])`
+  Возвращает мемоизированную функцию, пересоздаётся только при изменении зависимостей.
+
+* **useMemo** — `const value = useMemo(() => calc(), [deps])`
+  Мемоизация вычислений, полезно для тяжёлых операций.
+
+* **useTransition** — `const [isPending, startTransition] = useTransition()`
+  Разделяет срочные и несрочные обновления.
+
+* **useDeferredValue** — `const deferred = useDeferredValue(value)`
+  Отложенная версия значения, сглаживает ввод/отрисовку.
+
+* **useId** — `const id = useId()`
+  Стабильный уникальный id для связки `label` и `input`.
+
+* **useLayoutEffect** — `useLayoutEffect(() => {...}, [deps])`
+  Синхронный эффект: выполняется после изменения DOM, но до отрисовки.
+
+* **createContext** — `const Ctx = createContext(defaultValue)`
+  Создаёт объект контекста.
+
+* **Provider** — `<Ctx.Provider value={...}>...</Ctx.Provider>`
+  Доступ к данным для всего дерева компонентов.
+
+* **useContext** — `const value = useContext(Ctx)`
+  Получение текущего значения контекста.
+
+* **Consumer** — `<Ctx.Consumer>{value => ...}</Ctx.Consumer>`
+  Альтернатива `useContext`, работает в классовых компонентах.
 
