--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -2,7 +2,7 @@
 
 ## Зачем нужны хуки
 
-Раньше в React для работы со **состоянием** и **жизненным циклом** приходилось использовать классовые компоненты. Хуки позволяют делать то же самое в **функциональных** компонентах.  
+Раньше в React для работы с **состоянием** и **жизненным циклом** приходилось использовать классовые компоненты. Хуки позволяют делать то же самое в **функциональных** компонентах.  
 
 Основные преимущества:
 
