--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -4,7 +4,7 @@
 
 Раньше в React для работы с **состоянием** и **жизненным циклом** приходилось использовать классовые компоненты. Хуки позволяют делать то же самое в **функциональных** компонентах.  
 
-Основные преимущества:
+Основные преимущества использования хуков:
 
 * меньше кода и вложенности;
 * можно переиспользовать логику через кастомные хуки;
