--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -185,7 +185,7 @@ export default function usePolling(url, interval = 5000, initial = []) {
 1. Кастомный хук — это обычная функция, которая использует встроенные хуки.
 2. `useState` хранит `data`, `loading`, `error`.
 3. `useEffect` запускает периодический запрос и очищает таймер.
-4. Возвращаем объект `{ data, loading, error }` → можно переиспользовать.
+4. Возвращаем объект `{ data, loading, error }`, что позволяет переиспользовать хук в любых компонентах.
 
 ---
 
