--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -370,7 +370,7 @@ function Field() {
 ### Разбор синтаксиса
 
 1. `useId()` возвращает уникальный id.
-2. Подходит для связки `label` и `input`.
+2. Значение этого id затем используется в `htmlFor` у `label` и в `id` у `input` для их связи.
 
 ---
 
