--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -488,7 +488,7 @@ export default function ComponentA() {
 ### Разбор синтаксиса
 
 1. `useContext(AuthContext)` возвращает текущее значение контекста.
-2. Избегает «проброса пропсов» вниз по дереву.
+2. Использование `useContext` избегает «проброса пропсов» вниз по дереву.
 
 ---
 
