--- a/hooks-context/Конспект.md
+++ b/hooks-context/Конспект.md
@@ -568,4 +568,4 @@ export default function ComponentC() {
 * **createContext** — `const Ctx = createContext(defaultValue)`
   Создаёт объект контекста.
 
-* **Provider** — \`\<Ctx.Provider value={...}>
+* **Provider** — `<Ctx.Provider value={...}>` Обеспечивает доступ к значению контекста для всех дочерних компонентов.
